mosquitto-full-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mqtt-eclipse
  name: mosquitto-eclipse
  namespace: NSNAME
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mqtt-eclipse
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mqtt-eclipse
    spec:
      containers:
      - image: iwazumipnpdacr002.azurecr.io/openshift/eclipse-mosquitto:v1
        imagePullPolicy: Always
        name: mosquitto-eclipse
        ports:
        - containerPort: 1883
          name: default
          protocol: TCP
        - containerPort: 8883
          name: websocket
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mosquitto/config
          name: config-vol
        - mountPath: /config/cert
          name: config-vol-cert
        - mountPath: /config/auth
          name: config-vol-pwd
        - mountPath: /mqttdata
          name: mqtt-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: mosquitto.conf
            path: mosquitto.conf
          name: mosquitto-conf
        name: config-vol
      - configMap:
          defaultMode: 420
          items:
          - key: passwd
            path: passwd
          name: mosquitto-pwd
        name: config-vol-pwd
      - name: config-vol-cert
        secret:
          defaultMode: 420
          items:
          - key: tls.crt
            path: tls-cert
          - key: tls.key
            path: tls-key
          secretName: mosquitto-cert
      - name: mqtt-data
        persistentVolumeClaim:
          claimName: mosquitto-pvc
